--- a/other/Welcome_Page.html
+++ b/other/Welcome_Page.html
@@ -19,7 +19,7 @@
     <h1 class="text-center fw-bold" style="font-size: 5rem;">Kalana's POS System</h1>
 
     <!--Button-->
-    <a href="../HTML,CSS,JS/1_login_page.html" style="text-decoration: none; color: inherit;">
+    <a href="1_login_page.html" style="text-decoration: none; color: inherit;">
         <div class="d-grid gap-2 col-3 mx-auto mt-4">
             <button class="btn btn-success btn-lg fw-bold d-flex align-items-center justify-content-center" type="button" style="font-size: 30px;">
                 <img src="../assets/images/icons/welcome-page-icons/icons8-enter-50.png" alt="Enter Icon" title="Enter Icon" style="width: 30px; height: 30px; margin-right: 10px;">
