--- a/other/4_homepage.html
+++ b/other/4_homepage.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../assets/images/POS-Logo.png">
     <link rel="stylesheet" href=../assets/styles/normalize.css>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Customer Manage Page</title>
+    <title>Homepage</title>
 
     <style>
         body {
@@ -33,8 +33,6 @@
             overflow: hidden;
             border-radius: 0 8px 8px 0;
             justify-content: center;
-
-            z-index: 10;
         }
         .sidebar.expanded{
             width: 300px;
@@ -140,19 +138,33 @@
         .sidebar-item.active img {
             filter: brightness(0) invert(1);
         }
-
         /*side bar styles end-----------------------------------*/
 
-        #customer-page {
+        /*homepage content*/
+
+        #homepage-content {
             transition: margin-left 0.3s;
         }
 
-        #customer-page.shifted {
+        #homepage-content.shifted {
             margin-left: 300px;
         }
 
-        /*======================================================================*/
+        #homepage-content>#home-content-heading>h1:first-child>span>label{
+            color: orange;
+        }
 
+        #homepage-content>#customernav>a>img:hover{
+            transition:transform 1s ;
+            transform: scale(1.2);
+        }
+
+        #homepage-content>#itemnav>a>img:hover{
+            transition:transform 1s ;
+            transform: scale(1.2);
+        }
+
+        /*=========================================================================*/
 
 
         @media all and (max-width: 1440px) {
@@ -163,15 +175,11 @@
             .sidebar.expanded {
                 width: 250px;
             }
-            #customer-page {
+            #homepage-content {
                 margin-left: 100px;
             }
-            #customer-page.shifted {
+            #homepage-content.shifted {
                 margin-left: 250px;
-            }
-
-            .table {
-                width: 90%;
             }
         }
 
@@ -183,28 +191,24 @@
             .sidebar.expanded {
                 width: 200px;
             }
-            #customer-page {
+            #homepage-content {
                 margin-left: 80px;
             }
-            #customer-page.shifted {
+            #homepage-content.shifted {
                 margin-left: 200px;
             }
-
-            #customer-content h1 {
-                font-size: 40px;
+            /* Adjust font sizes */
+            #home-content-heading h1 {
+                font-size: 50px;
             }
             .sidebar-header {
                 font-size: 1rem;
-            }
-            .table {
-                font-size: 16px;
             }
         }
 
 
 
     </style>
-
 
 </head>
 <body>
@@ -246,150 +250,55 @@
 </div>
 
 
+
 <!-------------------------------------------------------------------Sidebar end ----------------------------------------------------------------------------------------------->
 
 
-<div id="customer-page">
-    <!-- Customer Page Content -->
-    <div class="content position-relative p-4" id="customer-content">
 
-        <!-- Header -->
-        <h1 class="text-center fw-bolder" style="font-size: 50px; margin-top: 20px;">Customer Manage</h1>
+    <!--Homepage Content-->
+    <div class="position-relative" id="homepage-content">
+        <!--heading-->
+        <div id="home-content-heading" class="position-absolute " style="width: max-content; height: max-content; left: 0; right: 0; margin: auto; top: 200px;">
+            <h1 class="text-center fw-bolder" style="font-size: 60px;">Welcome <span><label class="heading-label" id="username-label">Kalana</label></span></h1>
+            <h1 class="text-center fw-bolder" style="font-size: 60px;">to the POS System</h1>
+        </div>
 
-        <!-- Customer Form -->
-        <form class="mt-5 ">
-            <div class="row g-3 mb-4 " style="width: 80rem; left: 0; right: 0; margin: auto">
-                <!-- Customer ID -->
-                <div class="col-md-3">
-                    <label for="customerId" class="form-label fw-medium" style="font-size: 18px;">Customer ID</label>
-                    <input type="text" class="form-control" id="customerId" placeholder="Customer ID">
-                </div>
-                <!-- Customer Name -->
-                <div class="col-md-3">
-                    <label for="customerName" class="form-label fw-medium" style="font-size: 18px;">Customer Name</label>
-                    <input type="text" class="form-control" id="customerName" placeholder="Customer Name">
-                </div>
-                <!-- Customer Address -->
-                <div class="col-md-3">
-                    <label for="customerAddress" class="form-label fw-medium" style="font-size: 18px;">Customer Address</label>
-                    <input type="text" class="form-control" id="customerAddress" placeholder="Customer Address">
-                </div>
-                <!-- Customer Tel -->
-                <div class="col-md-3">
-                    <label for="customerTel" class="form-label fw-medium" style="font-size: 18px;">Customer Tel.</label>
-                    <input type="tel" class="form-control" id="customerTel" placeholder="Customer Tel.">
-                </div>
-                <!-- Customer Email -->
-                <div class="col-md-3">
-                    <label for="customerEmail" class="form-label fw-medium" style="font-size: 18px;">Customer Email</label>
-                    <input type="email" class="form-control" id="customerEmail" placeholder="Customer Email">
-                </div>
+        <!--nav and counts-->
+        <div class="position-absolute" id="count-display" style="width: 300px; height: max-content; left:0; right: 0; margin: auto; top: 430px;">
+            <div class="position-absolute" id="customernav" style="width: max-content; height: max-content; left: 0; ">
+                <a href="5_customer_manage_page.html" style="text-decoration: none; color: inherit;">
+                    <img src="../assets/images/icons/homepage-sidebar-icons/icons8-customer-100.png" alt="customer-icon">
+                </a>
+                <h1 class=" text-center fw-semibold" style="font-size: 16px; width: max-content; height: max-content; margin-left: -10px;">Customer Count:</h1>
+                <label class="count-label position-absolute" id="customercount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
             </div>
 
-
-            <!-- CRUD Buttons -->
-            <div class="d-flex justify-content-center mt-4 position-absolute" style=" width:fit-content; height:fit-content; top: 330px; left: 0;right: 0;margin: auto">
-                <button type="button" class="btn btn-success mx-2" style="font-size: 20px; width: 130px;">Add</button>
-                <button type="button" class="btn btn-warning mx-2" style="font-size: 20px; width: 130px; /*color: white*/">Update</button>
-                <button type="button" class="btn btn-danger mx-2" style="font-size: 20px; width: 130px;">Delete</button>
-                <button type="button" class="btn btn-primary mx-2" style="font-size: 20px; width: 130px;">Clear</button>
+            <div class="position-absolute" id="itemnav" style="width: max-content; height: max-content; right: 0; ">
+                <a href="6_item_manage_page.html" style="text-decoration: none; color: inherit;">
+                    <img src="../assets/images/icons/homepage-sidebar-icons/icons8-box-100.png" alt="customer-icon">
+                </a>
+                <h1 class=" text-center fw-semibold" style="font-size: 16px;">Item Count:</h1>
+                <label class="count-label position-absolute" id="itemcount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
             </div>
-        </form>
+        </div>
     </div>
-
-    <!--table-->
-    <div class="table position-relative" id="customer-table-content">
-
-        <table class="table table-bordered border-primary position-absolute " style="font-size: 18px; width: 1000px; height: 300px; left: 0; right: 0; margin: auto; top: 60px;">
-            <thead>
-            <tr>
-                <th>Customer ID</th>
-                <th>Customer Name</th>
-                <th>Customer Address</th>
-                <th>Customer Tel.</th>
-                <th>Customer Email</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
-
-
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        </tbody>
-        </table>
-
-
-    </div>
-</div>
 
 
 <!--Menubar script-->
 
 <script>
     function toggleSidebar() {
-
+        /*const sidebar = document.getElementById('sidebar');
+        sidebar.classList.toggle('expanded');*/
         const sidebar = document.getElementById('sidebar');
-        const content = document.getElementById('customer-page');
+        const content = document.getElementById('homepage-content');
 
         sidebar.classList.toggle('expanded');
         content.classList.toggle('shifted');
     }
 </script>
 
-<script src="menubar-script.js"></script>
-
+<script src="../HTML,CSS,JS/menubar-script.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
