--- a/other/5_customer_manage_page.html
+++ b/other/5_customer_manage_page.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../assets/images/POS-Logo.png">
     <link rel="stylesheet" href=../assets/styles/normalize.css>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Item Manage Page</title>
+    <title>Customer Manage Page</title>
 
     <style>
         body {
@@ -140,16 +140,19 @@
         .sidebar-item.active img {
             filter: brightness(0) invert(1);
         }
+
         /*side bar styles end-----------------------------------*/
-        #item-page {
+
+        #customer-page {
             transition: margin-left 0.3s;
         }
 
-        #item-page.shifted {
+        #customer-page.shifted {
             margin-left: 300px;
         }
 
-        /*==============================================================*/
+        /*======================================================================*/
+
 
 
         @media all and (max-width: 1440px) {
@@ -160,21 +163,15 @@
             .sidebar.expanded {
                 width: 250px;
             }
-            #item-page {
+            #customer-page {
                 margin-left: 100px;
             }
-            #item-page.shifted {
+            #customer-page.shifted {
                 margin-left: 250px;
             }
 
-            #item-page h1 {
-                font-size: 45px;
-            }
-            .form-label {
-                font-size: 16px;
-            }
             .table {
-                font-size: 16px;
+                width: 90%;
             }
         }
 
@@ -186,30 +183,28 @@
             .sidebar.expanded {
                 width: 200px;
             }
-            #item-page {
+            #customer-page {
                 margin-left: 80px;
             }
-            #item-page.shifted {
+            #customer-page.shifted {
                 margin-left: 200px;
             }
 
-            #item-page h1 {
+            #customer-content h1 {
                 font-size: 40px;
             }
-            .form-label {
-                font-size: 15px;
+            .sidebar-header {
+                font-size: 1rem;
             }
             .table {
-                font-size: 14px;
-            }
-
-            .table {
-                width: 100%;
-                font-size: 14px;
+                font-size: 16px;
             }
         }
 
+
+
     </style>
+
 
 </head>
 <body>
@@ -254,47 +249,40 @@
 <!-------------------------------------------------------------------Sidebar end ----------------------------------------------------------------------------------------------->
 
 
-
-
-<div id="item-page">
-    <!-- Item Page Content -->
-    <div class="content position-relative p-4" id="item-content">
+<div id="customer-page">
+    <!-- Customer Page Content -->
+    <div class="content position-relative p-4" id="customer-content">
 
         <!-- Header -->
-        <h1 class="text-center fw-bolder" style="font-size: 50px; margin-top: 20px;">Item Manage</h1>
+        <h1 class="text-center fw-bolder" style="font-size: 50px; margin-top: 20px;">Customer Manage</h1>
 
-        <!-- Item Form -->
+        <!-- Customer Form -->
         <form class="mt-5 ">
             <div class="row g-3 mb-4 " style="width: 80rem; left: 0; right: 0; margin: auto">
-                <!-- Item ID -->
+                <!-- Customer ID -->
                 <div class="col-md-3">
-                    <label for="itemId" class="form-label fw-medium" style="font-size: 18px;">Item ID</label>
-                    <input type="text" class="form-control" id="itemId" placeholder="Item ID">
+                    <label for="customerId" class="form-label fw-medium" style="font-size: 18px;">Customer ID</label>
+                    <input type="text" class="form-control" id="customerId" placeholder="Customer ID">
                 </div>
-                <!-- Item Name -->
+                <!-- Customer Name -->
                 <div class="col-md-3">
-                    <label for="itemName" class="form-label fw-medium" style="font-size: 18px;">Item Name</label>
-                    <input type="text" class="form-control" id="itemName" placeholder="Item Name">
+                    <label for="customerName" class="form-label fw-medium" style="font-size: 18px;">Customer Name</label>
+                    <input type="text" class="form-control" id="customerName" placeholder="Customer Name">
                 </div>
-                <!-- Item Type -->
+                <!-- Customer Address -->
                 <div class="col-md-3">
-                    <label for="itemType" class="form-label fw-medium" style="font-size: 18px;">Item Type</label>
-                    <input type="text" class="form-control" id="itemType" placeholder="Item Type">
+                    <label for="customerAddress" class="form-label fw-medium" style="font-size: 18px;">Customer Address</label>
+                    <input type="text" class="form-control" id="customerAddress" placeholder="Customer Address">
                 </div>
-                <!-- Item Price -->
+                <!-- Customer Tel -->
                 <div class="col-md-3">
-                    <label for="itemPrice" class="form-label fw-medium" style="font-size: 18px;">Item Price</label>
-                    <input type="text" class="form-control" id="itemPrice" placeholder="Item Price">
+                    <label for="customerTel" class="form-label fw-medium" style="font-size: 18px;">Customer Tel.</label>
+                    <input type="tel" class="form-control" id="customerTel" placeholder="Customer Tel.">
                 </div>
-                <!-- Item Description -->
+                <!-- Customer Email -->
                 <div class="col-md-3">
-                    <label for="itemDescription" class="form-label fw-medium" style="font-size: 18px;">Item Description</label>
-                    <input type="text" class="form-control" id="itemDescription" placeholder="Item Description">
-                </div>
-                <!-- Item QTY -->
-                <div class="col-md-3">
-                    <label for="itemQty" class="form-label fw-medium" style="font-size: 18px;">Item QTY</label>
-                    <input type="text" class="form-control" id="itemQty" placeholder="Item QTY">
+                    <label for="customerEmail" class="form-label fw-medium" style="font-size: 18px;">Customer Email</label>
+                    <input type="email" class="form-control" id="customerEmail" placeholder="Customer Email">
                 </div>
             </div>
 
@@ -309,20 +297,17 @@
         </form>
     </div>
 
-
-
     <!--table-->
-    <div class="table position-relative" id="item-table-content">
+    <div class="table position-relative" id="customer-table-content">
 
-        <table class="table table-bordered border-primary position-absolute " style="font-size: 18px; width: 1100px; height: 300px; left: 0; right: 0; margin: auto; top: 60px;">
+        <table class="table table-bordered border-primary position-absolute " style="font-size: 18px; width: 1000px; height: 300px; left: 0; right: 0; margin: auto; top: 60px;">
             <thead>
             <tr>
-                <th>Item ID</th>
-                <th>Item Name</th>
-                <th>Item Type</th>
-                <th>Item Price</th>
-                <th>Item Description</th>
-                <th>Item QTY</th>
+                <th>Customer ID</th>
+                <th>Customer Name</th>
+                <th>Customer Address</th>
+                <th>Customer Tel.</th>
+                <th>Customer Email</th>
             </tr>
             </thead>
             <tbody>
@@ -332,7 +317,6 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
 
 
             </tr>
@@ -342,18 +326,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -366,8 +340,6 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-
             </tr>
             </tbody>
         </table>
@@ -380,18 +352,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -404,8 +366,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
-
         </tr>
         </tbody>
         </table>
@@ -415,25 +375,20 @@
 </div>
 
 
-
 <!--Menubar script-->
 
 <script>
     function toggleSidebar() {
 
         const sidebar = document.getElementById('sidebar');
-        const content = document.getElementById('item-page');
-
+        const content = document.getElementById('customer-page');
 
         sidebar.classList.toggle('expanded');
         content.classList.toggle('shifted');
     }
 </script>
 
-
-
-
-<script src="menubar-script.js"></script>
+<script src="../HTML,CSS,JS/menubar-script.js"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
