--- a/other/6_item_manage_page.html
+++ b/other/6_item_manage_page.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../assets/images/POS-Logo.png">
     <link rel="stylesheet" href=../assets/styles/normalize.css>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Homepage</title>
+    <title>Item Manage Page</title>
 
     <style>
         body {
@@ -33,6 +33,8 @@
             overflow: hidden;
             border-radius: 0 8px 8px 0;
             justify-content: center;
+
+            z-index: 10;
         }
         .sidebar.expanded{
             width: 300px;
@@ -139,32 +141,15 @@
             filter: brightness(0) invert(1);
         }
         /*side bar styles end-----------------------------------*/
-
-        /*homepage content*/
-
-        #homepage-content {
+        #item-page {
             transition: margin-left 0.3s;
         }
 
-        #homepage-content.shifted {
+        #item-page.shifted {
             margin-left: 300px;
         }
 
-        #homepage-content>#home-content-heading>h1:first-child>span>label{
-            color: orange;
-        }
-
-        #homepage-content>#customernav>a>img:hover{
-            transition:transform 1s ;
-            transform: scale(1.2);
-        }
-
-        #homepage-content>#itemnav>a>img:hover{
-            transition:transform 1s ;
-            transform: scale(1.2);
-        }
-
-        /*=========================================================================*/
+        /*==============================================================*/
 
 
         @media all and (max-width: 1440px) {
@@ -175,11 +160,21 @@
             .sidebar.expanded {
                 width: 250px;
             }
-            #homepage-content {
+            #item-page {
                 margin-left: 100px;
             }
-            #homepage-content.shifted {
+            #item-page.shifted {
                 margin-left: 250px;
+            }
+
+            #item-page h1 {
+                font-size: 45px;
+            }
+            .form-label {
+                font-size: 16px;
+            }
+            .table {
+                font-size: 16px;
             }
         }
 
@@ -191,22 +186,28 @@
             .sidebar.expanded {
                 width: 200px;
             }
-            #homepage-content {
+            #item-page {
                 margin-left: 80px;
             }
-            #homepage-content.shifted {
+            #item-page.shifted {
                 margin-left: 200px;
             }
-            /* Adjust font sizes */
-            #home-content-heading h1 {
-                font-size: 50px;
+
+            #item-page h1 {
+                font-size: 40px;
             }
-            .sidebar-header {
-                font-size: 1rem;
+            .form-label {
+                font-size: 15px;
+            }
+            .table {
+                font-size: 14px;
+            }
+
+            .table {
+                width: 100%;
+                font-size: 14px;
             }
         }
-
-
 
     </style>
 
@@ -250,55 +251,190 @@
 </div>
 
 
-
 <!-------------------------------------------------------------------Sidebar end ----------------------------------------------------------------------------------------------->
 
 
 
-    <!--Homepage Content-->
-    <div class="position-relative" id="homepage-content">
-        <!--heading-->
-        <div id="home-content-heading" class="position-absolute " style="width: max-content; height: max-content; left: 0; right: 0; margin: auto; top: 200px;">
-            <h1 class="text-center fw-bolder" style="font-size: 60px;">Welcome <span><label class="heading-label" id="username-label">Kalana</label></span></h1>
-            <h1 class="text-center fw-bolder" style="font-size: 60px;">to the POS System</h1>
-        </div>
 
-        <!--nav and counts-->
-        <div class="position-absolute" id="count-display" style="width: 300px; height: max-content; left:0; right: 0; margin: auto; top: 430px;">
-            <div class="position-absolute" id="customernav" style="width: max-content; height: max-content; left: 0; ">
-                <a href="5_customer_manage_page.html" style="text-decoration: none; color: inherit;">
-                    <img src="../assets/images/icons/homepage-sidebar-icons/icons8-customer-100.png" alt="customer-icon">
-                </a>
-                <h1 class=" text-center fw-semibold" style="font-size: 16px; width: max-content; height: max-content; margin-left: -10px;">Customer Count:</h1>
-                <label class="count-label position-absolute" id="customercount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
+<div id="item-page">
+    <!-- Item Page Content -->
+    <div class="content position-relative p-4" id="item-content">
+
+        <!-- Header -->
+        <h1 class="text-center fw-bolder" style="font-size: 50px; margin-top: 20px;">Item Manage</h1>
+
+        <!-- Item Form -->
+        <form class="mt-5 ">
+            <div class="row g-3 mb-4 " style="width: 80rem; left: 0; right: 0; margin: auto">
+                <!-- Item ID -->
+                <div class="col-md-3">
+                    <label for="itemId" class="form-label fw-medium" style="font-size: 18px;">Item ID</label>
+                    <input type="text" class="form-control" id="itemId" placeholder="Item ID">
+                </div>
+                <!-- Item Name -->
+                <div class="col-md-3">
+                    <label for="itemName" class="form-label fw-medium" style="font-size: 18px;">Item Name</label>
+                    <input type="text" class="form-control" id="itemName" placeholder="Item Name">
+                </div>
+                <!-- Item Type -->
+                <div class="col-md-3">
+                    <label for="itemType" class="form-label fw-medium" style="font-size: 18px;">Item Type</label>
+                    <input type="text" class="form-control" id="itemType" placeholder="Item Type">
+                </div>
+                <!-- Item Price -->
+                <div class="col-md-3">
+                    <label for="itemPrice" class="form-label fw-medium" style="font-size: 18px;">Item Price</label>
+                    <input type="text" class="form-control" id="itemPrice" placeholder="Item Price">
+                </div>
+                <!-- Item Description -->
+                <div class="col-md-3">
+                    <label for="itemDescription" class="form-label fw-medium" style="font-size: 18px;">Item Description</label>
+                    <input type="text" class="form-control" id="itemDescription" placeholder="Item Description">
+                </div>
+                <!-- Item QTY -->
+                <div class="col-md-3">
+                    <label for="itemQty" class="form-label fw-medium" style="font-size: 18px;">Item QTY</label>
+                    <input type="text" class="form-control" id="itemQty" placeholder="Item QTY">
+                </div>
             </div>
 
-            <div class="position-absolute" id="itemnav" style="width: max-content; height: max-content; right: 0; ">
-                <a href="6_item_manage_page.html" style="text-decoration: none; color: inherit;">
-                    <img src="../assets/images/icons/homepage-sidebar-icons/icons8-box-100.png" alt="customer-icon">
-                </a>
-                <h1 class=" text-center fw-semibold" style="font-size: 16px;">Item Count:</h1>
-                <label class="count-label position-absolute" id="itemcount" style="width: max-content; height: max-content; margin-left: 40px;">10 </label>
+
+            <!-- CRUD Buttons -->
+            <div class="d-flex justify-content-center mt-4 position-absolute" style=" width:fit-content; height:fit-content; top: 330px; left: 0;right: 0;margin: auto">
+                <button type="button" class="btn btn-success mx-2" style="font-size: 20px; width: 130px;">Add</button>
+                <button type="button" class="btn btn-warning mx-2" style="font-size: 20px; width: 130px; /*color: white*/">Update</button>
+                <button type="button" class="btn btn-danger mx-2" style="font-size: 20px; width: 130px;">Delete</button>
+                <button type="button" class="btn btn-primary mx-2" style="font-size: 20px; width: 130px;">Clear</button>
             </div>
-        </div>
+        </form>
     </div>
+
+
+
+    <!--table-->
+    <div class="table position-relative" id="item-table-content">
+
+        <table class="table table-bordered border-primary position-absolute " style="font-size: 18px; width: 1100px; height: 300px; left: 0; right: 0; margin: auto; top: 60px;">
+            <thead>
+            <tr>
+                <th>Item ID</th>
+                <th>Item Name</th>
+                <th>Item Type</th>
+                <th>Item Price</th>
+                <th>Item Description</th>
+                <th>Item QTY</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            </tbody>
+        </table>
+
+
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+        </tr>
+        </tbody>
+        </table>
+
+
+    </div>
+</div>
+
 
 
 <!--Menubar script-->
 
 <script>
     function toggleSidebar() {
-        /*const sidebar = document.getElementById('sidebar');
-        sidebar.classList.toggle('expanded');*/
+
         const sidebar = document.getElementById('sidebar');
-        const content = document.getElementById('homepage-content');
+        const content = document.getElementById('item-page');
+
 
         sidebar.classList.toggle('expanded');
         content.classList.toggle('shifted');
     }
 </script>
 
-<script src="menubar-script.js"></script>
+
+
+
+<script src="../HTML,CSS,JS/menubar-script.js"></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
